base/downloader_challenge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: downloader-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: downloader-challenge
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: downloader-challenge
    spec:
      containers:
      - name: downloader-challenge
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.1
        resources:
          limits:
            cpu: "3"
            memory: 12Gi
          requests:
            cpu: "2"
            memory: 8Gi
        ports:
          - containerPort: 9233	
            name: downloader
          - containerPort: 9033	
            name: challenge
        volumeMounts:	
        - mountPath: /config	
          name: config	
      imagePullSecrets:	
        - name: image-pull	
      volumes:	
        - name: config	
          configMap:	
            name: config-uploader
