base/uploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
      - name: uploader
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.1
        resources:
          limits:
            cpu: "3"
            memory: 12Gi
          requests:
            cpu: "2"
            memory: 8Gi
        ports:	
          - containerPort: 9333	
            name: uploader	
        volumeMounts:	
        - mountPath: /config	
          name: config	
      imagePullSecrets:	
        - name: image-pull	
      volumes:	
        - name: config	
          configMap:	
            name: config-uploader
