base/metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata
  template:
    metadata:
      labels:
        app: metadata
    spec:
      containers:
      - name: metadata
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.1-meta-alpha
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
          - containerPort: 9733
            name: metadata
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config-metadata
---
apiVersion: v1
kind: Service
metadata:
  name: metadata
spec:
  ports:
  - port: 9733
    targetPort: 9733
    name: metadata
  selector:
    app: metadata
