base/stonenode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stonenode
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stonenode
  template:
    metadata:
      labels:
        app: stonenode
    spec:
      containers:
      - name: stonenode
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.1
        resources:
          limits:
            cpu: "2"
            memory: 8Gi
          requests:
            cpu: "2"
            memory: 8Gi
        ports:
          - containerPort: 9433
            name: stonenode
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config-stonenode
---
apiVersion: v1
kind: Service
metadata:
  name: stonenode
spec:
  ports:
  - port: 9433
    targetPort: 9433
    name: stonenode
  selector:
    app: stonenode
