base/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.2
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "2"
            memory: 4Gi
        ports:
          - containerPort: 9033
            name: gateway
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
  - port: 9033
    targetPort: 9033
    name: gateway
  selector:
    app: gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/ingress-hostname-source: "annotation-only"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/connection-proxy-header: ""
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Gnfd-Unsigned-Msg,X-Gnfd-Txn-Hash,Date,X-Gnfd-Object-ID,X-Gnfd-Piece-Index,X-Gnfd-Redundancy-Index"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-Gnfd-Request-ID,,X-Gnfd-Signed-Msg,X-Gnfd-Object-ID,X-Gnfd-Integrity-Hash,X-Gnfd-Piece-Hash"
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: gateway
spec:
  rules:
    - host: patch-me.bk.nodereal.cc
      http:
        paths:
          - backend:
              service:
                name: gateway
                port:
                  number: 9033
            path: /
            pathType: ImplementationSpecific
    - host: "replaceme.*.bk.nodereal.cc"
      http:
        paths:
        - backend:
            service:
              name: gateway
              port:
                number: 9033
          path: /
          pathType: ImplementationSpecific
